--- a/.github/workflows/sync-gentoo.yml
+++ b/.github/workflows/sync-gentoo.yml
@@ -2,7 +2,7 @@ name: Sync Gentoo
 
 on:
   schedule:
-    - cron: '0 */3 * * *' # every 3 hourss
+    - cron: '0 */3 * * *' # every 3 hours
   workflow_dispatch: # on button click
 
 jobs:
